--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -67,4 +67,12 @@ flutter {
     source '../..'
 }
 
-dependencies {}
+dependencies {
+
+     // Import the BoM for the Firebase platform
+    implementation(platform("com.google.firebase:firebase-bom:33.6.0"))
+
+    // Add the dependency for the Vertex AI in Firebase library
+    // When using the BoM, you don't specify versions in Firebase library dependencies
+    implementation("com.google.firebase:firebase-vertexai")
+}
